@@ -158,6 +158,9 @@
 <MODE NAME="doxygen"		FILE="doxygen.xml"
         FILE_NAME_GLOB="doxyfile*" />
 
+<MODE NAME="drawj2d"		FILE="drawj2d.xml"
+	FILE_NAME_GLOB="*.hcl" />
+
 <MODE NAME="dsssl"		FILE="dsssl.xml"
         FILE_NAME_GLOB="*.dsl" />
 
